--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    ## redirect to HTTPS # SONRADAN
+    RewriteEngine On
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^(.*)$ https://universefinishing.co.uk/$1 [R=301,L]
+
 </IfModule>
